# snippet

./: Cargo.toml  snip.py
src/: algebraic.rs  arg_cmp.rs  binary_search.rs  bit_field.rs  compress_crd.rs  factorization.rs  factors.rs  fenwick_tree.rs  indexer.rs  iter_extent.rs  lazy_segtree.rs  lib.rs  linear.rs  max_flow.rs  modint.rs  potential_union_find.rs  scanner.rs  scc.rs  segment_tree.rs  union_find.rs  vc.rs  xgcd.rs
tests/: algebraic.rs  arg_cmp.rs  binary_search.rs  bit_field.rs  compress_crd.rs  factorization.rs  factors.rs  indexer.rs  iter_extent.rs  lazy_segment_tree.rs  modint.rs  potential_union_find.rs  segment_tree.rs  union_find.rs  xgcd.rs
